# neuro-graph-dynamics

./: .replit  Makefile  README.md  README.org  app.py  bedrock_helper.py  database.py  ellama-ollama.el  gemini_helper.py  knowledge_graph.db  knowledge_graph.db.old  knowledge_graph.json  main.py  ollama_helper.py  pasted_text.txt  pasted_text_1725996758024.txt  pasted_text_1725997375923.txt  pasted_text_1725997394251.txt  pasted_text_1725998102070.txt  pasted_text_1726001053069.txt  pasted_text_1726409882706.txt  pyproject.toml  replit.nix
data/knowledge_graphs/: ai_research_topics.json  aif_c01.json  cs.json  logic_programming.json  math.json  philosophical_tapestry.json
scripts/: check_alignment.py
static/css/: styles.css
static/js/: home.js
templates/: 404.html  500.html  debug.html  footer.html  header.html  index.html  philosophers_pagerank.html  top_nodes_distances.html  visualize.html
