[tool.poetry]
name = "repl-nix-neurographdynamics"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
networkx = "^3.3"
matplotlib = "^3.9.2"
python-louvain = "^0.16"
scipy = "^1.14.1"
flask = "^3.0.3"
jq = "1.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
