[tool.poetry]
name = "repl-nix-neurographdynamics"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
networkx = "^3.3"
matplotlib = "^3.9.2"
python-louvain = "^0.16"
scipy = "^1.14.1"
flask = "^3.0.3"
jq = "1.8.0"
requests = "2.32.3"
replit-ai = "^0.0.11"
anthropic = "0.34.2"
boto3 = "1.35.16"
openai = "1.44.1"
google-generativeai = "0.8.0"
ollama = "0.3.3"
pydantic = "^2.9.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
flake8 = "^7.1.1"
mypy = "^1.11.2"
black = "^24.8.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
